@@ -12,10 +12,8 @@
 <h1 class="title">Mathematics</h1>
 
 <p>Docutils supports inline math with the prefix or postfix <tt class="docutils literal">:math:</tt>
-role specificator, <tt class="math">
-n! + \sin(x_n^2)</tt>
- and <tt class="math">
-A_\text{c} =
+role specificator, <tt class="math">n! + \sin(x_n^2)</tt>
+ and <tt class="math">A_\text{c} =
 \frac{\pi}{4} d^2</tt>
 , as well as displayed math via the
 <cite>math</cite> directive:</p>
@@ -32,8 +30,7 @@ See <a class="reference internal" href="#eq-m">eq:M</a> and <a class="reference 
 <pre class="math" id="eq-m">
 \mathbf{M} = \left(\begin{matrix}a&amp;b\\c&amp;d\end{matrix}\right)
 </pre>
-<p>is <tt class="math">
-|\mathbf{M}| = ad - bc</tt>
+<p>is <tt class="math">|\mathbf{M}| = ad - bc</tt>
 .</p>
 <p>More than one display math block can be put in one math directive.
 For example, the following sum and integral with limits:</p>
@@ -49,8 +46,7 @@ directives:</p>
 <pre class="math" id="eq-schrodinger">
 i\hbar \frac{\partial }{\partial t}\Psi  = \hat{H}\Psi ,
 </pre>
-<p>with the <em>wave function</em> <tt class="math">
-\Psi </tt>
+<p>with the <em>wave function</em> <tt class="math">\Psi </tt>
 , describes how the quantum state of a
 physical system changes in time.</p>
 <dl class="docutils">
@@ -62,44 +58,32 @@ physical system changes in time.</p>
 <col width="33%" />
 </colgroup>
 <tbody valign="top">
-<tr><td><tt class="math">
-\acute{a}</tt>
+<tr><td><tt class="math">\acute{a}</tt>
       <tt class="docutils literal">\acute{a}</tt></td>
-<td><tt class="math">
-\dot{t}</tt>
+<td><tt class="math">\dot{t}</tt>
         <tt class="docutils literal">\dot{t}</tt></td>
-<td><tt class="math">
-\hat{\gamma}</tt>
+<td><tt class="math">\hat{\gamma}</tt>
    <tt class="docutils literal"><span class="pre">\hat{\gamma}</span></tt></td>
 </tr>
-<tr><td><tt class="math">
-\grave{a}</tt>
+<tr><td><tt class="math">\grave{a}</tt>
       <tt class="docutils literal">\grave{a}</tt></td>
-<td><tt class="math">
-\ddot{t}</tt>
+<td><tt class="math">\ddot{t}</tt>
        <tt class="docutils literal">\ddot{t}</tt></td>
-<td><tt class="math">
-\tilde{\alpha}</tt>
+<td><tt class="math">\tilde{\alpha}</tt>
  <tt class="docutils literal"><span class="pre">\tilde{\alpha}</span></tt></td>
 </tr>
-<tr><td><tt class="math">
-\breve{x}</tt>
+<tr><td><tt class="math">\breve{x}</tt>
       <tt class="docutils literal">\breve{x}</tt></td>
-<td><tt class="math">
-\dddot{t}</tt>
+<td><tt class="math">\dddot{t}</tt>
       <tt class="docutils literal">\dddot{t}</tt></td>
-<td><tt class="math">
-\vec{\imath}</tt>
+<td><tt class="math">\vec{\imath}</tt>
    <tt class="docutils literal"><span class="pre">\vec{\imath}</span></tt></td>
 </tr>
-<tr><td><tt class="math">
-\check{a}</tt>
+<tr><td><tt class="math">\check{a}</tt>
       <tt class="docutils literal">\check{a}</tt></td>
-<td><tt class="math">
-\bar{a}</tt>
+<td><tt class="math">\bar{a}</tt>
         <tt class="docutils literal">\bar{a}</tt></td>
-<td><tt class="math">
-\vec{R}</tt>
+<td><tt class="math">\vec{R}</tt>
         <tt class="docutils literal">\vec{R}</tt></td>
 </tr>
 </tbody>
