@@ -862,8 +862,7 @@ directly (the code will not be parsed/tagged, as the language is not known)
 or as base for special code roles, e.g. the LaTeX code in the next
 paragraph.</p>
 <p>Docutils uses LaTeX syntax for math directives and roles:
-<code class="tex">\alpha = f(x)</code> prints <span class="math">
-\(\alpha = f(x)\)</span>
+<code class="tex">\alpha = f(x)</code> prints <span class="math">\(\alpha = f(x)\)</span>
 .</p>
 <p>The <tt class="docutils literal">:code:</tt> option of the <cite>include</cite> directive sets the included content
 as a code block, here the rst file <tt class="docutils literal">header_footer.txt</tt> with line numbers:</p>
